fix header spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,7 @@ body {
     gap: 1rem;
     max-width: 1000px;
     margin: 0 auto;
+    overflow-x: hidden;
   }
 
 .site-title {
@@ -34,7 +35,8 @@ body {
   text-decoration: none;
   color: white;
   white-space: nowrap; /* Prevent it from wrapping onto multiple lines */
-}
+  margin-right: auto; /* push nav to the right */
+  }
 
 .site-title:visited {
   color: white;
@@ -60,6 +62,8 @@ body {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    flex-shrink: 0;
+    white-space: nowrap;
   }
 
   .nav-links a:hover {
